Breacrumb style and a11y fixes for contrast

--- a/scss/partials/_breadcrumb.scss
+++ b/scss/partials/_breadcrumb.scss
@@ -2,8 +2,12 @@
   background: transparent;
   padding: 0;
   font-size: .9rem;
+  opacity: 0.7;
 }
 
 .breadcrumb-item + .breadcrumb-item::before {
-  content: '\00bb'; // &raquo;
+  content: '\203A'; // &raquo;
+}
+.breadcrumb-item.active {
+  color: #4b5157;
 }
